--- a/404.html
+++ b/404.html
@@ -32,8 +32,11 @@
             content="Charles Miller | Web Developer & UX/UI Designer"
         />
         <link rel="apple-touch-icon" href="/logo192.png" />
-        <!-- Adobe fonts -->
-        <link rel="stylesheet" href="https://use.typekit.net/yop8rxg.css" />
+        <!-- Google fonts -->
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+            rel="stylesheet"
+        />
         <!-- FAVICON -->
         <link
             rel="apple-touch-icon"
