new hero message and fonts

--- a/404.html
+++ b/404.html
@@ -32,6 +32,8 @@
             content="Charles Miller | Web Developer & UX/UI Designer"
         />
         <link rel="apple-touch-icon" href="/logo192.png" />
+        <!-- ADOBE FONT -->
+        <link rel="stylesheet" href="https://use.typekit.net/yop8rxg.css" />
         <!-- FAVICON -->
         <link
             rel="apple-touch-icon"
